[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dspy-graph"
version = "0.1.0"
description = "A graph-based workflow framework for DSPy with visualization and optimization support"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Mahdi Majd", email = "mahdi.kazemimajd@gmail.com"}
]
keywords = ["dspy", "graph", "workflow", "llm", "visualization", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dspy>=3.0.4",
    "graphviz>=0.21",
    "optuna>=4.6.0",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/mahdiiix/dspy_graph"
Repository = "https://github.com/mahdiiix/dspy_graph"
Issues = "https://github.com/mahdiiix/dspy_graph/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E501", "I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
